fixing button alignment in IE6 and IE7, Bug 28048

--- a/resources/uploadWizard.css
+++ b/resources/uploadWizard.css
@@ -628,6 +628,16 @@ input[type='text'].mwe-validator-error, textarea.mwe-validator-error {
     background: url('images/question-hover.png') no-repeat;
 }
 
+/* Make category add button smaller */
+.cat-widget .ui-button-text {
+	padding: 0;
+}
+
+/* Hack for Explorer 6 and 7 - line up buttons with other content */
+.mwe-upwiz-buttons .ui-button, .cat-widget .ui-button {
+	*vertical-align: middle;
+}
+
 #upload-wizard .ui-corner-tl { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; }
 #upload-wizard .ui-corner-tr { -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; }
 #upload-wizard .ui-corner-bl { -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; }
